[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/BaseUiComponents/Button/ButtonFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/BaseUiComponents/Button/ButtonNormal.tres" type="StyleBox" id=2]
[ext_resource path="res://scenes/BaseUiComponents/Button/ButtonPressed.tres" type="StyleBox" id=3]
[ext_resource path="res://scenes/BaseUiComponents/Button/ButtonHover.tres" type="StyleBox" id=4]
[ext_resource path="res://scenes/BaseUiComponents/Button/Button.gd" type="Script" id=5]

[node name="Button" type="Button"]
margin_right = 160.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 101.371, 28.3146 )
focus_mode = 0
custom_colors/font_color = Color( 0.027451, 0.231373, 0.298039, 1 )
custom_colors/font_color_hover = Color( 0.00599999, 0.2, 0.148267, 1 )
custom_colors/font_color_pressed = Color( 0.25, 0.205, 0.1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "Create"
script = ExtResource( 5 )

[connection signal="button_down" from="." to="." method="_on_Button_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
